Removed a ton of console logs, commented the Create Quiz stuff, and fixed button spacing on CreateQuiz

--- a/Frontend/src/components/Coach/createQuiz.css
+++ b/Frontend/src/components/Coach/createQuiz.css
@@ -22,3 +22,16 @@ background-color: var(--primary-blue);
 padding: 10px 20px;
 border-radius: 10px; /* Border radius to create rounded edges */
 }
+
+.button-spacer {
+  display: flex;
+  justify-content: center;
+}
+.button-right {
+  margin-left: 25%;
+
+}
+.button-left {
+  margin-left: 0px;
+  margin-right: 25%;
+}
